--- a/Calculator.html
+++ b/Calculator.html
@@ -19,6 +19,11 @@
        align-items: center;
        justify-content: center;
     }
+    h3{
+        color: rgb(173, 211, 47);
+        text-align: center;
+        
+    }
     .Calculator{
         background: rgb(2, 38, 48); 
         padding: 20px;
@@ -72,6 +77,7 @@
    <div class="container">
       <div class="Calculator">
         <form>
+             <h3>Made in Wasin Ahmed</h3>
             <div class="display">
              <input type="text" name="display">
             </div>
